--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
-    "firebase": "latest",
+    "firebase": "^12.4.0",
     "firebase-admin": "latest",
     "firebase-functions": "latest",
     "geist": "^1.3.1",
